--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,47 @@
-# Build and Release Folders
-bin/
-bin-debug/
-bin-release/
+# Created by https://www.gitignore.io
 
-# Other files and folders
-.settings/
+### OSX ###
+.DS_Store
+.AppleDouble
+.LSOverride
 
-# Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
-# should NOT be excluded as they contain compiler settings and other important
-# information for Eclipse / Flash Builder.
+# Icon must end with two \r
+Icon
+
+
+# Thumbnails
+._*
+
+# Files that might appear on external disk
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote AFP share
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+.idea
+*.log
+sitemap.xml
+sitemap.xml.gz
+wordpress/wp-config.php
+wordpress/error_log
+wordpress/wp-content/advanced-cache.php
+wordpress/wp-content/backup-db/
+wordpress/wp-content/backups/
+wordpress/wp-content/blogs.dir/
+wordpress/wp-content/cache/
+wordpress/wp-content/upgrade/
+wordpress/wp-content/uploads/
+wordpress/wp-content/wp-cache-config.php
+
+static/node_modules
+static/builds
+static/.idea
+
+mysqldump
+.my.cnf
+exports/temp.sql
