--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,8 @@ Temporary Items
 
 .idea
 *.log
-sitemap.xml
-sitemap.xml.gz
+wordpress/sitemap.xml
+wordpress/sitemap.xml.gz
 wordpress/wp-config.php
 wordpress/error_log
 wordpress/wp-content/advanced-cache.php
