--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,8 @@ wordpress/wp-content/cache/
 wordpress/wp-content/upgrade/
 wordpress/wp-content/uploads/
 wordpress/wp-content/wp-cache-config.php
+wordpress/wp-content/plugins/all-in-one-wp-migration/backups/
+wordpress/wp-content/plugins/all-in-one-wp-migration/storage/status.php
 
 static/node_modules
 static/builds
