--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,9 @@ wordpress/wp-content/uploads/
 wordpress/wp-content/wp-cache-config.php
 wordpress/wp-content/plugins/all-in-one-wp-migration/backups/
 wordpress/wp-content/plugins/all-in-one-wp-migration/storage/status.php
+wordpress/wp-content/plugins/all-in-one-wp-security-and-firewall/logs/wp-security-log-cron-job.txt
+wordpress/wp-content/plugins/all-in-one-wp-security-and-firewall/logs/wp-security-log.txt
+wordpress/wp-content/aiowps_backups/
 
 static/node_modules
 static/builds
